<resources>
    <string name="app_name">SecondProject</string>
    <string name="locate_us">Locate Us</string>
    <string name="copyright_2018_gulf_college_all_rights_reserved">Copyright © 2018 Gulf College. All Rights Reserved.</string>
    <string name="locate_us_menu">Locate Us</string>
    <string name="contact">Contact</string>
    <string name="home">HOME</string>
    <string name="moodle">Moodle</string>
    <string name="mail_id"><![CDATA[<u> gcollege@omantel.net.om</u>]]></string>
    <string name="change_language">Change Language</string>
    <string name="academic_faculties">ACADEMIC FACULTIES</string>
    <string name="support">SUPPORT FACILITIES</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_registered_login_me">Already Registered!!Login me</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification">Notification from cloud</string>

</resources>
