<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/locate"
         android:title="@string/locate_us_menu"
         android:icon="@android:drawable/ic_dialog_map"
         app:showAsAction="always"></item>
    <item android:id="@+id/language"
        android:title="@string/change_language"
        app:showAsAction="never"></item>
    <item android:id="@+id/locate1"
        android:title="@string/locate_us_menu"
        app:showAsAction="never"></item>
    <item android:id="@+id/contact1"
        android:title="@string/contact"
        app:showAsAction="never"></item>
    <group android:id="@+id/group_delete">
        <item android:id="@+id/menu_archive"
            android:title="@string/locate_us" />
        <item android:id="@+id/menu_delete"
            android:title="@string/contact" />
    </group>
</menu>